# gmx-scattering

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
src/: CMakeLists.txt  isotope.cpp  isotope.h  scattering-debye-sans.cpp  scattering-debye-sans.h  scattering-debye-saxs.cpp  scattering-debye-saxs.h  scattering-debye.cpp  scattering-debye.h  scattering.cpp  scattering.h  scatteringfactors.cpp  scatteringfactors.h
